force-app/main/default/objects/CPQ_SOTS__c/CPQ_SOTS__c.object-meta.xml
<CustomObject>
    <label>CPQ - SOTS</label>
    <nameField>
        <displayFormat>SOTS-{00000}</displayFormat>
        <label>CPQ - SOTS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ - SOTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>