force-app/main/default/objects/CPQ_SOTS__c/fields/CPQ_Offering__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CPQ - Offering</label>
    <referenceTo>Offerings__c</referenceTo>
    <relationshipName>CPQ_SOTS</relationshipName>
    <type>Lookup</type>
</CustomField>