force-app/main/default/objects/CPQ_SOTS__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>E.g. 1 for Monthly, 12 for Annually</inlineHelpText>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>