force-app/main/default/objects/CPQ_SOTS__c/fields/SOTS_Code__c.field-meta.xml
<CustomField>
    <fullName>SOTS_Code__c</fullName>
    <label>SOTS Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>